adjust height on friends container to prevent y overflow

--- a/frontend/src/components/Friends/FriendsList.css
+++ b/frontend/src/components/Friends/FriendsList.css
@@ -3,7 +3,7 @@
   border-radius: 8px;
   max-width: 100%;
   margin: 1rem;
-  height: 88%;
+  height: 76.9vh;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -18,12 +18,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* height: 100%; */
+  height: 100%;
   width: 100%;
   flex-grow: 1;
   overflow-y: auto;
   overflow-x: hidden;
   position: relative;
+  margin-bottom: 0;
 }
 
 .friendsContainer::-webkit-scrollbar {
